# ComputationalPhysics

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt
src/integrators/embedded_methods/: embeddedMethods.h
src/integrators/explicit_methods/: explicitRK.h
src/integrators/robust_tasks/: implicitRK.h
src/interpolators/: cubic_spline.h  newton.h
src/partial_diffs/: grid.h  initial_funcs.h
src/partial_diffs/schemes/explicit/: leftAngle.h
src/partial_diffs/solvers/: 1D_transfer.h
src/solvers/: three_diagonal_solver.h
src/types/: basic_types.h  core_types.h
src/utils/: fmap.h
src/utils/diff_equation_struct/: right_part.h
src/utils/special_matrix/: boundary_matrix.h  three_diagonal_matrix.h
src/utils/tensor_ops/: kroneker_product.h
tests/: CMakeLists.txt  test_1D_transfer_left_angle.cpp  test_boundary_problem.cpp  test_embeddedMethods.cpp  test_implicitRK.cpp  test_interpolation.cpp
tests/python_vizualize/: test_1D_transfer_left_angle.py
